# django-geo-spaas-adas-viewer

./: .travis.yml  Dockerfile  README.md  README.rst  catalog.json  runtests.py  setup.cfg  setup.py
.github/workflows/: tests_and_build.yml
geospaas_adas_viewer/: forms.py  tests.py  urls.py  views.py
geospaas_adas_viewer/fixtures/: catalog_adas.json
geospaas_adas_viewer/templates/adas_viewer/: ds_info.html  ds_info_adas.html
geospaas_adas_viewer/tests/: settings.py  urls.py
tests/: settings.py  urls.py
