[metadata]
name="geospaas_adas_viewer",
version="0.1.0",
author="Anton Korosov","Anton Korosov","Arash Azamifard"
    author_email="Anton.Korosov@nersc.no","Adrien.Perrin@nersc.no","arash.azamifard@nersc.no"
    description="REST API for GeoSPaaS",
    long_description_content_type="text/markdown",
    url="https://github.com/nansencenter/django-geo-spaas-adas-viewer",
    packages=setuptools.find_packages(),
    classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: POSIX :: Linux",
    ],
    python_requires='>=3.7',
    install_requires=['django_geo_spaas'],
    include_package_data=True,

[options]
include_package_data = true
